fix wrapping on mobile map cards

--- a/src/app/ui/location-cards/location-cards.component.scss
+++ b/src/app/ui/location-cards/location-cards.component.scss
@@ -131,8 +131,20 @@
       position:absolute;
       bottom:0;
       left:0;
+      width:100%;
       padding: grid(1) 0 grid(1) grid(2);
-      li { float:left; margin-right: grid(2); }
+      li { 
+        float:left; 
+        padding-right: grid(2); 
+        max-width: 33.3333%;
+        span {
+          display:block;
+          width:100%;
+          white-space: nowrap;
+          overflow:hidden; 
+          text-overflow: ellipsis;
+        }
+      }
       li:last-child { margin-right: 0; }
       // hide the second stat (raw evictions) when there is a selected choropleth
       li:nth-child(2) { display:none; }
@@ -157,6 +169,13 @@
   .location-card { 
     width: 100%; 
     min-width: grid(35); 
+    .card-content li { 
+      max-width: none;
+      span {
+        overflow:auto;
+        white-space: normal;
+      }
+    }
   }
 }
 // tablet and larger displays:
